kubernetes/circle-partner-navigator/base/backend-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cpn-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpn-backend
  serviceName: cpn-backend-service
  template:
    metadata:
      labels:
        app: cpn-backend
    spec:
      serviceAccount: cpn
      terminationGracePeriodSeconds: 10
      containers:
      - name: cpn-backend
        image: quay.io/opentelekomcloud/circle-partner-navigator-backend
        ports:
        - containerPort: 1337
        command:
        - "/bin/sh"
        - "-c"
        - "source /secrets/cpn-env; npm run start"
        volumeMounts:
        - name: cpn-backend-persistent-storage
          mountPath: /opt/app/public/uploads
  volumeClaimTemplates:
    - apiVersion: v1	
      kind: PersistentVolumeClaim	
      metadata:
        name: cpn-backend-persistent-storage
      spec:
        storageClassName: "csi-disk"
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 300Gi
  volumes:
    - name: vault-agent-config
      configMap:
        defaultMode: 420
        name: cpn-vault-config
    - name: secrets
      emptyDir: {}
    - name: "k8-tokens"
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 7200
            path: "vault-token"
