kubernetes/circle-partner-navigator/base/front-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpn-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpn-front
  template:
    metadata:
      labels:
        app: cpn-front
    spec:
      containers:
        - name: cpn-front
          image: "quay.io/opentelekomcloud/circle-partner-navigator-frontend:change_1_latest"
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "200m"
              memory: "256Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
