kubernetes/circle-partner-navigator/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpn-backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 1337
      targetPort: 1337
