kubernetes/circle-partner-navigator/base/cpn-front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpn-front
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: partners.otc-service.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cpn-front
                port:
                  number: 80
  tls:
    - hosts:
        - partners.otc-service.com
      secretName: cpn-front-tls
