kubernetes/circle-partner-navigator/base/cpn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpn-backend-ingress
spec:
  rules:
    - host: strapi.partners.otc-service.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cpn-backend
                port:
                  number: 1337
